# crux-insight

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  local.toml.example
chain-indexer/: Cargo.toml  Dockerfile
chain-indexer/src/: database.rs  main.rs  settings.rs  sync_indexes.rs
chain-indexer/src/actors/: data_inserter.rs  header_fetcher.rs  mempool_inserter.rs  mempool_listener.rs  mod.rs  transaction_collector.rs  transaction_fetcher.rs  zmq_publisher.rs
chain-indexer/src/entities/: addresses.rs  blocks.rs  boxes.rs  data_inputs.rs  inputs.rs  mempool_boxes.rs  mempool_inputs.rs  mempool_token_in_box.rs  mempool_tokens.rs  mempool_transactions.rs  mod.rs  prelude.rs  token_in_box.rs  tokens.rs  transactions.rs
chain-indexer/src/types/: mempool_work.rs  mod.rs  work_object.rs
ergo-node-client/: Cargo.toml  README.md
ergo-node-client/.openapi-generator/: FILES
ergo-node-client/docs/: AddressHolder.md  AddressValidity.md  AndPredicate.md  AndPredicateAllOf.md  ApiError.md  Asset.md  AssetIssueRequest.md  AvlTreeData.md  BalanceInfo.md  BalanceInfoTokensInner.md  BalancesSnapshot.md  BlacklistedPeers.md  BlockAdProofs.md  BlockHeader.md  BlockHeaderWithoutPow.md  BlockTransactions.md  BlockchainApi.md  BlocksApi.md  BoxesRequestHolder.md  BoxesRequestHolderTargetAssetsInnerInner.md  BurnTokensRequest.md  CandidateBlock.md  CheckWallet.md  Commitment.md  CommitmentWithSecret.md  ConnectedPeer.md  ContainsAssetPredicate.md  ContainsAssetPredicateAllOf.md  ContainsPredicate.md  ContainsPredicateAllOf.md  CryptoResult.md  DeriveKey.md  DeriveKeyResult.md  DeriveNextKeyResult.md  DhtSecret.md  DlogCommitment.md  EmissionApi.md  EmissionInfo.md  EmissionScripts.md  EqualsPredicate.md  (+89 more)
ergo-node-client/src/: lib.rs
ergo-node-client/src/apis/: blockchain_api.rs  blocks_api.rs  configuration.rs  emission_api.rs  info_api.rs  inputs_api.rs  mining_api.rs  mod.rs  nipopow_api.rs  node_api.rs  outputs_api.rs  peers_api.rs  scan_api.rs  script_api.rs  transactions_api.rs  utils_api.rs  utxo_api.rs  wallet_api.rs
ergo-node-client/src/models/: address_holder.rs  address_validity.rs  and_predicate.rs  and_predicate_all_of.rs  api_error.rs  asset.rs  asset_issue_request.rs  avl_tree_data.rs  balance_info.rs  balance_info_tokens_inner.rs  balances_snapshot.rs  blacklisted_peers.rs  block_ad_proofs.rs  block_header.rs  block_header_without_pow.rs  block_transactions.rs  boxes_request_holder.rs  boxes_request_holder_target_assets_inner_inner.rs  burn_tokens_request.rs  candidate_block.rs  check_wallet.rs  commitment.rs  commitment_with_secret.rs  connected_peer.rs  derive_key.rs  (+89 more)
(+20 files in other folders)
