[package]
name = "chain-indexer"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
futures = "0.3.28"
log = "0.4.19"
reqwest = "0.11.18"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.171", features = ["derive"]}
serde_json = "1.0.102"
structopt = "0.3.26"
time = "0.3.23"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.8", features = ["with-chrono-0_4","with-serde_json-1"] }
ergo-node-client = { workspace = true }
ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust.git", branch = "develop" }
hex = "0.4.3"
cached = "0.44.0"
async-channel = "1.9.0"
tmq = "0.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
config = "0.13.3"
