[package]
name = "chain-indexer"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.38"
futures = "0.3.28"
reqwest = "0.11.18"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.171", features = ["derive"]}
serde_json = "1.0.102"
tokio = { version = "1", features = ["full"] }
ergo-node-client = { workspace = true }
ergo-lib = "0.28.0"
hex = "0.4.3"
cached = "0.44.0"
tmq = "0.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
config = "0.13.3"
async-std = "1.12.0"
time = "0.3.36"
migration = { path = "../migration" }
