[package]
name = "ergo-node-client"
version = "5.0.12"
authors = ["ergoplatform@protonmail.com"]
description = "API docs for Ergo Node. Models are shared between all Ergo products"
license = "CC0 1.0 Universal"
edition = "2021"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
